spinners to admin added

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "src/styles.scss",
               "node_modules/alertifyjs/build/css/alertify.min.css",
               "node_modules/alertifyjs/build/css/themes/bootstrap.min.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-spinner/animations/ball-spin.css",
+              "node_modules/ngx-spinner/animations/ball-triangle-path.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
